--- a/template/backend/docker-compose.yml
+++ b/template/backend/docker-compose.yml
@@ -12,11 +12,26 @@ services:
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
     ports:
-      - "8080"
-      - "8081"
+      - "8080:8080"
+      - "8081:8081"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+  ambev.developerevaluation.client:
+    container_name: ambev_developer_evaluation_client
+    image: ${DOCKER_REGISTRY-}ambevdeveloperevaluationclient
+    build:
+      context: ../frontend/src/Ambev.DeveloperEvaluation.Client
+      dockerfile: Dockerfile
+    volumes:
+      - ../frontend/src/Ambev.DeveloperEvaluation.Client:/app 
+    ports:
+      - "4200:80"
+    environment:
+      - NODE_ENV=production
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - TZ=America/Sao_Paulo
 
   ambev.developerevaluation.database:
     container_name: ambev_developer_evaluation_database
